Changed how pages are changed

--- a/LazyPepper Website/Contact_Page.html
+++ b/LazyPepper Website/Contact_Page.html
@@ -25,14 +25,14 @@
 
             <div id="menu">
 
-                <!-- Change class="active" to the currentlly opened page-->
-                <a href="#" id="aboutButton">About</a>
-                <a href="#" id="charcuterieButton">Charcuterie</a>
-                <a href="#" id="cuttingButton">Cutting</a>
-                <a href="#" id="specialtyButton">Specialty</a>
-                <a href="#" id="customButton">Custom</a>
-                <a href="#" id="contactButton" class="active">Contact</a>
-                <a href="#" id="galleryButton">Gallery</a>
+                <!-- Change class="" to the currentlly opened page-->
+                <a href="About_Page.html">About</a>
+                <a href="Charcuterie_Page.php">Charcuterie</a>
+                <a href="Cutting_Page.php">Cutting</a>
+                <a href="Specialty_Page.php">Specialty</a>
+                <a href="Custom_Page.html">Custom</a>
+                <a href="Contact_Page.html" class="active">Contact</a>
+                <a href="Gallery_Page.php">Gallery</a>
             </div>
         </div>
     </div>
