--- a/LazyPepper Website/Contact_Page.html
+++ b/LazyPepper Website/Contact_Page.html
@@ -33,6 +33,7 @@
                 <a href="Custom_Page.html">Custom</a>
                 <a href="Contact_Page.html" class="active">Contact</a>
                 <a href="Gallery_Page.php">Gallery</a>
+                <a href="Buy_Page.php">View Cart</a>
             </div>
         </div>
     </div>
